--- a/series.conf
+++ b/series.conf
@@ -14519,6 +14519,7 @@
 	patches.suse/wifi-avoid-offset-calculation-on-NULL-pointer.patch
 	patches.suse/wifi-mac80211-handle-320-MHz-in-ieee80211_ht_cap_ie_.patch
 	patches.suse/ice-Fix-VF-Reset-paths-when-interface-in-a-failed-ov.patch
+	patches.suse/net-libwx-fix-memory-leak-on-msix-entry.patch
 	patches.suse/perf-kwork-Fix-a-build-error-on-32-bit.patch
 	patches.suse/perf-lock-contention-Fix-a-build-error-on-32-bit.patch
 	patches.suse/tools-headers-UAPI-Update-tools-s-copy-of-vhost.h-header.patch
