--- a/blacklist.conf
+++ b/blacklist.conf
@@ -242,3 +242,4 @@ ac76b786cc370b000c76f3115a5d2ee76ff05c08 # No file to patch
 f96c48670319d685d18d50819ed0c1ef751ed2ac # Linus reverted that in the merge commit
 895ee5aefb7e24203de5dffae7ce9a02d78fa3d1 # suggested due to stable-6.6, but we have not taken the patch this reverts
 c5dbf04160005e07e8ca7232a7faa77ab1547ae0 # stupid cleanup that makes code worse
+5736aa9537c9b8927dec32d3d47c8c31fe560f62 # driver added only in v6.6
