--- a/series.conf
+++ b/series.conf
@@ -14521,6 +14521,7 @@
 	patches.suse/ice-Fix-VF-Reset-paths-when-interface-in-a-failed-ov.patch
 	patches.suse/net-libwx-fix-memory-leak-on-msix-entry.patch
 	patches.suse/net-ravb-Check-return-value-of-reset_control_deasser.patch
+	patches.suse/net-ravb-Use-pm_runtime_resume_and_get.patch
 	patches.suse/perf-kwork-Fix-a-build-error-on-32-bit.patch
 	patches.suse/perf-lock-contention-Fix-a-build-error-on-32-bit.patch
 	patches.suse/tools-headers-UAPI-Update-tools-s-copy-of-vhost.h-header.patch
