--- a/series.conf
+++ b/series.conf
@@ -10103,6 +10103,7 @@
 	patches.suse/tools-power-x86-intel-speed-select-v1.17-release.patch
 	patches.suse/platform-x86-amd-pmf-Use-str_on_off-helper.patch
 	patches.suse/platform-x86-amd-pmc-Move-PMC-driver-to-separate-dir.patch
+	patches.suse/platform-mellanox-Cosmetic-changes.patch
 	patches.suse/platform-x86-amd-pmf-Fix-a-missing-cleanup-path.patch
 	patches.suse/platform-x86-amd-pmc-Fix-build-error-with-randconfig.patch
 	patches.suse/usb-cdns3-Put-the-cdns-set-active-part-outside-the-s.patch
