--- a/series.conf
+++ b/series.conf
@@ -14524,6 +14524,7 @@
 	patches.suse/net-ravb-Use-pm_runtime_resume_and_get.patch
 	patches.suse/net-ravb-Make-write-access-to-CXR35-first-before-acc.patch
 	patches.suse/net-ravb-Start-TX-queues-after-HW-initialization-suc.patch
+	patches.suse/net-ravb-Stop-DMA-in-case-of-failures-on-ravb_open.patch
 	patches.suse/perf-kwork-Fix-a-build-error-on-32-bit.patch
 	patches.suse/perf-lock-contention-Fix-a-build-error-on-32-bit.patch
 	patches.suse/tools-headers-UAPI-Update-tools-s-copy-of-vhost.h-header.patch
