--- a/series.conf
+++ b/series.conf
@@ -9826,6 +9826,7 @@
 	patches.suse/pinctrl-mediatek-fix-pull_type-data-for-MT7981.patch
 	patches.suse/pinctrl-mediatek-assign-functions-to-configure-pin-b.patch
 	patches.suse/pinctrl-mlxbf3-Remove-gpio_disable_free.patch
+	patches.suse/pm-Introduce-DEFINE_NOIRQ_DEV_PM_OPS-helper.patch
 	patches.suse/pinctrl-cherryview-fix-address_space_handler-argumen.patch
 	patches.suse/dt-bindings-clock-xlnx-versal-clk-drop-select-false.patch
 	patches.suse/drivers-clk-keystone-Fix-parameter-judgment-in-_of_p.patch
