--- a/series.conf
+++ b/series.conf
@@ -16451,6 +16451,7 @@
 	patches.suse/ixgbe-Fix-an-error-handling-path-in-ixgbe_read_iosf_.patch
 	patches.suse/octeontx2-pf-Remove-xdp-queues-on-program-detach.patch
 	patches.suse/msft-hv-2940-hv_netvsc-Fix-race-condition-between-netvsc_probe-an.patch
+	patches.suse/idpf-avoid-compiler-padding-in-virtchnl2_ptype-struc.patch
 	patches.suse/nvme-rdma-Fix-transfer-length-when-write_generate-re.patch
 	patches.suse/dm-limit-the-number-of-targets-and-parameter-size-ar.patch
 	patches.suse/iommu-Allow-ops-default_domain-to-work-when-CONFIG_IOMMU_DMA
