--- a/series.conf
+++ b/series.conf
@@ -16535,6 +16535,7 @@
 	patches.suse/msft-hv-2942-hv_netvsc-Register-VF-in-netvsc_probe-if-NET_DEVICE_.patch
 	patches.suse/selftests-net-let-big_tcp-test-cope-with-slow-env.patch
 	patches.suse/selftests-cmsg_ipv6-repeat-the-exact-packet.patch
+	patches.suse/net-intel-fix-old-compiler-regressions.patch
 	patches.suse/wifi-iwlwifi-fix-double-free-bug.patch
 	patches.suse/wifi-cfg80211-fix-wiphy-delayed-work-queueing.patch
 	patches.suse/wifi-mac80211-fix-RCU-use-in-TDLS-fast-xmit.patch
