--- a/series.conf
+++ b/series.conf
@@ -16449,6 +16449,7 @@
 	patches.suse/nfc-nci-free-rx_data_reassembly-skb-on-NCI-device-cl.patch
 	patches.suse/e1000e-correct-maximum-frequency-adjustment-values.patch
 	patches.suse/ixgbe-Fix-an-error-handling-path-in-ixgbe_read_iosf_.patch
+	patches.suse/octeontx2-pf-Remove-xdp-queues-on-program-detach.patch
 	patches.suse/msft-hv-2940-hv_netvsc-Fix-race-condition-between-netvsc_probe-an.patch
 	patches.suse/nvme-rdma-Fix-transfer-length-when-write_generate-re.patch
 	patches.suse/dm-limit-the-number-of-targets-and-parameter-size-ar.patch
