--- a/series.conf
+++ b/series.conf
@@ -16444,6 +16444,7 @@
 	patches.suse/HID-i2c-hid-of-fix-NULL-deref-on-failed-power-up.patch
 	patches.suse/HID-bpf-remove-double-fdget.patch
 	patches.suse/HID-bpf-actually-free-hdev-memory-after-attaching-a-.patch
+	patches.suse/gve-Fix-skb-truesize-underestimation.patch
 	patches.suse/nfc-nci-free-rx_data_reassembly-skb-on-NCI-device-cl.patch
 	patches.suse/msft-hv-2940-hv_netvsc-Fix-race-condition-between-netvsc_probe-an.patch
 	patches.suse/nvme-rdma-Fix-transfer-length-when-write_generate-re.patch
