--- a/series.conf
+++ b/series.conf
@@ -4650,6 +4650,7 @@
 	patches.suse/PCI-qcom-Use-DWC-helpers-for-modifying-the-read.patch
 	patches.suse/PCI-qcom-Disable-write-access-to-read-only-regi.patch
 	patches.suse/PCI-qcom-Do-not-advertise-hotplug-capability-for-IPs.patch
+	patches.suse/PCI-qcom-Do-not-advertise-hotplug-capability-for-IP2.patch
 	patches.suse/PCI-rcar-host-Remove-unused-static-pcie_base-and-pci.patch
 	patches.suse/PCI-rockchip-Remove-writes-to-unused-registers.patch
 	patches.suse/PCI-rockchip-Write-PCI-Device-ID-to-correct-reg.patch
