--- a/series.conf
+++ b/series.conf
@@ -4654,6 +4654,7 @@
 	patches.suse/PCI-qcom-Do-not-advertise-hotplug-capability-for-IP-.patch
 	patches.suse/PCI-qcom-Use-post-init-sequence-of-IP-v2.3.2-for-v2..patch
 	patches.suse/PCI-qcom-Do-not-advertise-hotplug-capability-for-IP3.patch
+	patches.suse/PCI-qcom-Do-not-advertise-hotplug-capability-for-IP5.patch
 	patches.suse/PCI-rcar-host-Remove-unused-static-pcie_base-and-pci.patch
 	patches.suse/PCI-rockchip-Remove-writes-to-unused-registers.patch
 	patches.suse/PCI-rockchip-Write-PCI-Device-ID-to-correct-reg.patch
