--- a/series.conf
+++ b/series.conf
@@ -15111,6 +15111,7 @@
 	patches.suse/EDAC-mc-Add-support-for-HBM3-memory-type.patch
 	patches.suse/EDAC-amd64-Add-support-for-family-0x19-models-0x90-9f-devi.patch
 	patches.suse/x86-lib-Fix-overflow-when-counting-digits.patch
+	patches.suse/virt-sev-guest-Convert-to-platform-remove-callback-r.patch
 	patches.suse/x86-barrier-Do-not-serialize-MSR-accesses-on-AMD
 	patches.suse/x86-cpu-intel_epb-Don-t-rely-on-link-order
 	patches.suse/x86-CPU-AMD-Add-ZenX-generations-flags
