--- a/series.conf
+++ b/series.conf
@@ -16059,6 +16059,7 @@
 	patches.suse/KVM-remove-CONFIG_HAVE_KVM_EVENTFD.patch
 	patches.suse/KVM-remove-CONFIG_HAVE_KVM_IRQFD.patch
 	patches.suse/KVM-s390-vsie-Fix-STFLE-interpretive-execution-identification.patch
+	patches.suse/KVM-introduce-CONFIG_KVM_COMMON.patch
 	patches.suse/KVM-x86-add-missing-depends-on-KVM
 	patches.suse/KVM-x86-Harden-copying-of-userspace-array-against-ov.patch
 	patches.suse/KVM-x86-mmu-Declare-flush_remote_tlbs-_range-hooks-i.patch
