--- a/series.conf
+++ b/series.conf
@@ -16543,6 +16543,7 @@
 	patches.suse/KVM-s390-vsie-fix-race-during-shadow-creation.patch
 	patches.suse/KVM-s390-fix-cc-for-successful-PQAP.patch
 	patches.suse/KVM-x86-Check-irqchip-mode-before-create-PIT.patch
+	patches.suse/KVM-x86-Give-a-hint-when-Win2016-might-fail-to-boot-.patch
 	patches.suse/crypto-ccp-Fix-null-pointer-dereference-in-__sev_pla.patch
 	patches.suse/crypto-algif_hash-Remove-bogus-SGL-free-on-zero-leng.patch
 	patches.suse/selftests-net-cut-more-slack-for-gro-fwd-tests.patch
