--- a/series.conf
+++ b/series.conf
@@ -13076,6 +13076,7 @@
 	patches.suse/0066-drm-bridge-Drop-CONFIG_OF-conditionals-around-of_nod.patch
 	patches.suse/0067-drm-connector-document-DRM_MODE_COLORIMETRY_COUNT.patch
 	patches.suse/0068-drm-doc-rfc-No-STAGING-out-of-drivers-staging.patch
+	patches.suse/0069-drm-doc-rfc-Mark-Dev_coredump-as-completed.patch
 	patches.suse/drm-ssd130x-Fix-screen-clearing.patch
 	patches.suse/drm-bridge-it66121-get_edid-callback-must-not-return.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
