--- a/series.conf
+++ b/series.conf
@@ -13079,6 +13079,7 @@
 	patches.suse/0069-drm-doc-rfc-Mark-Dev_coredump-as-completed.patch
 	patches.suse/0070-drm-doc-rfc-Mark-DRM_VM_BIND-as-complete.patch
 	patches.suse/0071-drm-doc-rfc-Mark-GPU-VA-as-complete.patch
+	patches.suse/0072-drm-debugfs-Add-inline-to-drm_debugfs_dev_init-to-su.patch
 	patches.suse/drm-ssd130x-Fix-screen-clearing.patch
 	patches.suse/drm-bridge-it66121-get_edid-callback-must-not-return.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
