--- a/series.conf
+++ b/series.conf
@@ -13084,6 +13084,7 @@
 	patches.suse/0074-drm-mst-delete-unnecessary-case-in-drm_dp_add_payloa.patch
 	patches.suse/0075-drm-mst-Refactor-the-flow-for-payload-allocation-rem.patch
 	patches.suse/0076-drm-imx-ipuv3-Convert-to-platform-remove-callback-re.patch
+	patches.suse/0077-drm-ingenic-Convert-to-platform-remove-callback-retu.patch
 	patches.suse/drm-ssd130x-Fix-screen-clearing.patch
 	patches.suse/drm-bridge-it66121-get_edid-callback-must-not-return.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
