--- a/series.conf
+++ b/series.conf
@@ -13086,6 +13086,7 @@
 	patches.suse/0076-drm-imx-ipuv3-Convert-to-platform-remove-callback-re.patch
 	patches.suse/0077-drm-ingenic-Convert-to-platform-remove-callback-retu.patch
 	patches.suse/0078-drm-msm-Convert-to-platform-remove-callback-returnin.patch
+	patches.suse/0079-drm-shmobile-Convert-to-platform-remove-callback-ret.patch
 	patches.suse/drm-ssd130x-Fix-screen-clearing.patch
 	patches.suse/drm-bridge-it66121-get_edid-callback-must-not-return.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
