--- a/series.conf
+++ b/series.conf
@@ -13089,6 +13089,7 @@
 	patches.suse/0079-drm-shmobile-Convert-to-platform-remove-callback-ret.patch
 	patches.suse/0080-drm-ssd130x-Print-the-PWM-s-label-instead-of-its-num.patch
 	patches.suse/drm-ssd130x-Fix-screen-clearing.patch
+	patches.suse/0082-drm-ssd130x-Use-bool-for-ssd130x_deviceinfo-flags.patch
 	patches.suse/drm-bridge-it66121-get_edid-callback-must-not-return.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
