--- a/series.conf
+++ b/series.conf
@@ -13090,6 +13090,7 @@
 	patches.suse/0080-drm-ssd130x-Print-the-PWM-s-label-instead-of-its-num.patch
 	patches.suse/drm-ssd130x-Fix-screen-clearing.patch
 	patches.suse/0082-drm-ssd130x-Use-bool-for-ssd130x_deviceinfo-flags.patch
+	patches.suse/0083-fbdev-au1200fb-Do-not-display-boot-up-logo.patch
 	patches.suse/drm-bridge-it66121-get_edid-callback-must-not-return.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
