--- a/series.conf
+++ b/series.conf
@@ -13092,6 +13092,7 @@
 	patches.suse/0082-drm-ssd130x-Use-bool-for-ssd130x_deviceinfo-flags.patch
 	patches.suse/0083-fbdev-au1200fb-Do-not-display-boot-up-logo.patch
 	patches.suse/0084-fbdev-mmp-mmpfb-Do-not-display-boot-up-logo.patch
+	patches.suse/0085-fbdev-core-Fix-style-of-code-for-boot-up-logo.patch
 	patches.suse/drm-bridge-it66121-get_edid-callback-must-not-return.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
