--- a/series.conf
+++ b/series.conf
@@ -13093,6 +13093,7 @@
 	patches.suse/0083-fbdev-au1200fb-Do-not-display-boot-up-logo.patch
 	patches.suse/0084-fbdev-mmp-mmpfb-Do-not-display-boot-up-logo.patch
 	patches.suse/0085-fbdev-core-Fix-style-of-code-for-boot-up-logo.patch
+	patches.suse/0086-fbdev-core-Unexport-logo-helpers.patch
 	patches.suse/drm-bridge-it66121-get_edid-callback-must-not-return.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
