--- a/series.conf
+++ b/series.conf
@@ -13095,6 +13095,7 @@
 	patches.suse/0085-fbdev-core-Fix-style-of-code-for-boot-up-logo.patch
 	patches.suse/0086-fbdev-core-Unexport-logo-helpers.patch
 	patches.suse/0087-fbdev-core-Move-logo-functions-into-separate-source-.patch
+	patches.suse/0088-fbdev-core-Remove-empty-internal-helpers-from-fb_log.patch
 	patches.suse/drm-bridge-it66121-get_edid-callback-must-not-return.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
