--- a/series.conf
+++ b/series.conf
@@ -13099,6 +13099,7 @@
 	patches.suse/0089-fbdev-core-Clean-up-include-statements-in-fbmem.c.patch
 	patches.suse/0090-drm-buddy-Improve-contiguous-memory-allocation.patch
 	patches.suse/0091-drm-amdgpu-Move-the-size-computations-to-drm-buddy.patch
+	patches.suse/0092-drm-i915-Move-the-size-computations-to-drm-buddy.patch
 	patches.suse/drm-bridge-it66121-get_edid-callback-must-not-return.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
