--- a/series.conf
+++ b/series.conf
@@ -13103,6 +13103,7 @@
 	patches.suse/0093-drm-panel-Don-t-store-check-prepared-enabled-for-sim.patch
 	patches.suse/0094-drm-panel-s6e63m0-Don-t-store-check-prepared-enabled.patch
 	patches.suse/0095-drm-panel-otm8009a-Don-t-double-check-prepared-enabl.patch
+	patches.suse/0096-drm-atomic-helper-drm_atomic_helper_shutdown-NULL-sh.patch
 	patches.suse/drm-bridge-it66121-get_edid-callback-must-not-return.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
