--- a/series.conf
+++ b/series.conf
@@ -13107,6 +13107,7 @@
 	patches.suse/0097-drm-imx-ipuv3-Call-drm_atomic_helper_shutdown-at-shu.patch
 	patches.suse/0098-drm-ingenic-Call-drm_atomic_helper_shutdown-at-shutd.patch
 	patches.suse/0099-drm-amd-display-Fix-Wuninitialized-in-dm_helpers_dp_.patch
+	patches.suse/0100-drm-debugfs-Fix-drm_debugfs_remove_files-stub.patch
 	patches.suse/drm-bridge-it66121-get_edid-callback-must-not-return.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
