--- a/series.conf
+++ b/series.conf
@@ -13110,6 +13110,7 @@
 	patches.suse/0100-drm-debugfs-Fix-drm_debugfs_remove_files-stub.patch
 	patches.suse/0101-drm-ssd130x-Store-the-HW-buffer-in-the-driver-privat.patch
 	patches.suse/drm-bridge-it66121-get_edid-callback-must-not-return.patch
+	patches.suse/0103-drm-komeda-add-NV12-format-to-support-writeback-laye.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
