--- a/series.conf
+++ b/series.conf
@@ -13111,6 +13111,7 @@
 	patches.suse/0101-drm-ssd130x-Store-the-HW-buffer-in-the-driver-privat.patch
 	patches.suse/drm-bridge-it66121-get_edid-callback-must-not-return.patch
 	patches.suse/0103-drm-komeda-add-NV12-format-to-support-writeback-laye.patch
+	patches.suse/0104-drm-nouveau-nvif-refactor-deprecated-strncpy.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
