--- a/series.conf
+++ b/series.conf
@@ -13113,6 +13113,7 @@
 	patches.suse/0103-drm-komeda-add-NV12-format-to-support-writeback-laye.patch
 	patches.suse/0104-drm-nouveau-nvif-refactor-deprecated-strncpy.patch
 	patches.suse/0105-drm-nouveau-core-refactor-deprecated-strncpy.patch
+	patches.suse/0106-drm-nouveau-pm-refactor-deprecated-strncpy.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
