--- a/series.conf
+++ b/series.conf
@@ -13114,6 +13114,7 @@
 	patches.suse/0104-drm-nouveau-nvif-refactor-deprecated-strncpy.patch
 	patches.suse/0105-drm-nouveau-core-refactor-deprecated-strncpy.patch
 	patches.suse/0106-drm-nouveau-pm-refactor-deprecated-strncpy.patch
+	patches.suse/0107-drm-bridge-dw-hdmi-cec-Add-arbitration-lost-event.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
