--- a/series.conf
+++ b/series.conf
@@ -13117,6 +13117,7 @@
 	patches.suse/0107-drm-bridge-dw-hdmi-cec-Add-arbitration-lost-event.patch
 	patches.suse/0108-drm-dp_mst-Fix-NULL-dereference-during-payload-addit.patch
 	patches.suse/0109-drm-dp_mst-Sanitize-error-return-during-payload-addi.patch
+	patches.suse/0110-drm-dp_mst-Tune-down-error-message-during-payload-ad.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
