--- a/series.conf
+++ b/series.conf
@@ -13119,6 +13119,7 @@
 	patches.suse/0109-drm-dp_mst-Sanitize-error-return-during-payload-addi.patch
 	patches.suse/0110-drm-dp_mst-Tune-down-error-message-during-payload-ad.patch
 	patches.suse/0111-drm-nouveau-devinit-tu102-remove-attempt-at-loading-.patch
+	patches.suse/0112-drm-nouveau-imem-support-allocations-not-preserved-a.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
