--- a/series.conf
+++ b/series.conf
@@ -13120,6 +13120,7 @@
 	patches.suse/0110-drm-dp_mst-Tune-down-error-message-during-payload-ad.patch
 	patches.suse/0111-drm-nouveau-devinit-tu102-remove-attempt-at-loading-.patch
 	patches.suse/0112-drm-nouveau-imem-support-allocations-not-preserved-a.patch
+	patches.suse/0113-drm-nouveau-gr-gf100-lose-contents-of-global-ctxbufs.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
