--- a/series.conf
+++ b/series.conf
@@ -13122,6 +13122,7 @@
 	patches.suse/0112-drm-nouveau-imem-support-allocations-not-preserved-a.patch
 	patches.suse/0113-drm-nouveau-gr-gf100-lose-contents-of-global-ctxbufs.patch
 	patches.suse/0114-drm-nouveau-mmu-gp100-always-invalidate-TLBs-at-CACH.patch
+	patches.suse/0115-drm-nouveau-kms-nv50-fix-mst-payload-alloc-fail-cras.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
