--- a/series.conf
+++ b/series.conf
@@ -13124,6 +13124,7 @@
 	patches.suse/0114-drm-nouveau-mmu-gp100-always-invalidate-TLBs-at-CACH.patch
 	patches.suse/0115-drm-nouveau-kms-nv50-fix-mst-payload-alloc-fail-cras.patch
 	patches.suse/0116-drm-nouveau-disp-rearrange-output-methods.patch
+	patches.suse/0117-drm-nouveau-disp-add-output-detect-method.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
