--- a/series.conf
+++ b/series.conf
@@ -13125,6 +13125,7 @@
 	patches.suse/0115-drm-nouveau-kms-nv50-fix-mst-payload-alloc-fail-cras.patch
 	patches.suse/0116-drm-nouveau-disp-rearrange-output-methods.patch
 	patches.suse/0117-drm-nouveau-disp-add-output-detect-method.patch
+	patches.suse/0118-drm-nouveau-disp-add-output-method-to-fetch-edid.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
