--- a/series.conf
+++ b/series.conf
@@ -13127,6 +13127,7 @@
 	patches.suse/0117-drm-nouveau-disp-add-output-detect-method.patch
 	patches.suse/0118-drm-nouveau-disp-add-output-method-to-fetch-edid.patch
 	patches.suse/0119-drm-nouveau-disp-rename-internal-output-acquire-rele.patch
+	patches.suse/0120-drm-nouveau-kms-Add-INHERIT-ioctl-to-nvkm-nvif-for-r.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
