--- a/series.conf
+++ b/series.conf
@@ -13130,6 +13130,7 @@
 	patches.suse/0120-drm-nouveau-kms-Add-INHERIT-ioctl-to-nvkm-nvif-for-r.patch
 	patches.suse/0121-drm-nouveau-disp-shuffle-to-make-upcoming-diffs-pret.patch
 	patches.suse/0122-drm-nouveau-disp-add-acquire_dac.patch
+	patches.suse/0123-drm-nouveau-disp-add-acquire_sor-pior.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
