--- a/series.conf
+++ b/series.conf
@@ -13132,6 +13132,7 @@
 	patches.suse/0122-drm-nouveau-disp-add-acquire_dac.patch
 	patches.suse/0123-drm-nouveau-disp-add-acquire_sor-pior.patch
 	patches.suse/0124-drm-nouveau-disp-update-SOR-routing-immediately-on-a.patch
+	patches.suse/0125-drm-nouveau-kms-nv50-pull-some-common-init-out-of-OR.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
