--- a/series.conf
+++ b/series.conf
@@ -13134,6 +13134,7 @@
 	patches.suse/0124-drm-nouveau-disp-update-SOR-routing-immediately-on-a.patch
 	patches.suse/0125-drm-nouveau-kms-nv50-pull-some-common-init-out-of-OR.patch
 	patches.suse/0126-drm-nouveau-kms-nv50-remove-nv_encoder.audio.connect.patch
+	patches.suse/0127-drm-nouveau-kms-nv50-keep-output-state-around-until-.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
