--- a/series.conf
+++ b/series.conf
@@ -13135,6 +13135,7 @@
 	patches.suse/0125-drm-nouveau-kms-nv50-pull-some-common-init-out-of-OR.patch
 	patches.suse/0126-drm-nouveau-kms-nv50-remove-nv_encoder.audio.connect.patch
 	patches.suse/0127-drm-nouveau-kms-nv50-keep-output-state-around-until-.patch
+	patches.suse/0128-drm-nouveau-kms-nv50-move-audio-enable-post-modeset.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
