--- a/series.conf
+++ b/series.conf
@@ -13137,6 +13137,7 @@
 	patches.suse/0127-drm-nouveau-kms-nv50-keep-output-state-around-until-.patch
 	patches.suse/0128-drm-nouveau-kms-nv50-move-audio-enable-post-modeset.patch
 	patches.suse/0129-drm-nouveau-disp-add-output-hdmi-config-method.patch
+	patches.suse/0130-drm-nouveau-disp-move-hdmi-disable-out-of-release.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
