--- a/series.conf
+++ b/series.conf
@@ -13139,6 +13139,7 @@
 	patches.suse/0129-drm-nouveau-disp-add-output-hdmi-config-method.patch
 	patches.suse/0130-drm-nouveau-disp-move-hdmi-disable-out-of-release.patch
 	patches.suse/0131-drm-nouveau-disp-release-outputs-post-modeset.patch
+	patches.suse/0132-drm-nouveau-disp-remove-SOR-routing-updates-from-sup.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
