--- a/series.conf
+++ b/series.conf
@@ -13141,6 +13141,7 @@
 	patches.suse/0131-drm-nouveau-disp-release-outputs-post-modeset.patch
 	patches.suse/0132-drm-nouveau-disp-remove-SOR-routing-updates-from-sup.patch
 	patches.suse/0133-drm-nouveau-disp-add-output-backlight-control-method.patch
+	patches.suse/0134-drm-nouveau-disp-add-output-lvds-config-method.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
