--- a/series.conf
+++ b/series.conf
@@ -13147,6 +13147,7 @@
 	patches.suse/0137-drm-nouveau-disp-add-dp-aux-xfer-method.patch
 	patches.suse/0138-drm-nouveau-disp-add-dp-rates-method.patch
 	patches.suse/0139-drm-nouveau-kms-nv50-split-DP-disable-enable-into-tw.patch
+	patches.suse/0140-drm-nouveau-kms-nv50-flush-mst-disables-together.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
