--- a/series.conf
+++ b/series.conf
@@ -13149,6 +13149,7 @@
 	patches.suse/0139-drm-nouveau-kms-nv50-split-DP-disable-enable-into-tw.patch
 	patches.suse/0140-drm-nouveau-kms-nv50-flush-mst-disables-together.patch
 	patches.suse/0141-drm-nouveau-kms-nv50-fixup-sink-D3-before-tearing-do.patch
+	patches.suse/0142-drm-nouveau-disp-add-dp-train-method.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
