--- a/series.conf
+++ b/series.conf
@@ -13151,6 +13151,7 @@
 	patches.suse/0141-drm-nouveau-kms-nv50-fixup-sink-D3-before-tearing-do.patch
 	patches.suse/0142-drm-nouveau-disp-add-dp-train-method.patch
 	patches.suse/0143-drm-nouveau-disp-move-link-training-out-of-superviso.patch
+	patches.suse/0144-drm-nouveau-disp-add-dp-sst-config-method.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
