--- a/series.conf
+++ b/series.conf
@@ -13153,6 +13153,7 @@
 	patches.suse/0143-drm-nouveau-disp-move-link-training-out-of-superviso.patch
 	patches.suse/0144-drm-nouveau-disp-add-dp-sst-config-method.patch
 	patches.suse/0145-drm-nouveau-disp-add-dp-mst-id-get-put-methods.patch
+	patches.suse/0146-drm-nouveau-disp-move-outp-conn-construction-to-chip.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
