--- a/series.conf
+++ b/series.conf
@@ -13154,6 +13154,7 @@
 	patches.suse/0144-drm-nouveau-disp-add-dp-sst-config-method.patch
 	patches.suse/0145-drm-nouveau-disp-add-dp-mst-id-get-put-methods.patch
 	patches.suse/0146-drm-nouveau-disp-move-outp-conn-construction-to-chip.patch
+	patches.suse/0147-drm-nouveau-disp-move-outp-init-fini-paths-to-chipse.patch
 	patches.suse/drm-bridge-tc358768-Fix-use-of-uninitialized-variabl.patch
 	patches.suse/drm-bridge-tc358768-Fix-bit-updates.patch
 	patches.suse/drm-bridge-tc358768-Use-struct-videomode.patch
